--- a/src/backend/HomeCloud.Maps.Application/HomeCloud.Maps.Application.csproj
+++ b/src/backend/HomeCloud.Maps.Application/HomeCloud.Maps.Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.11.6" />
     <PackageReference Include="OneOf" Version="3.0.178" />
   </ItemGroup>
