--- a/src/backend/HomeCloud.Maps.Domain/HomeCloud.Maps.Domain.csproj
+++ b/src/backend/HomeCloud.Maps.Domain/HomeCloud.Maps.Domain.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.11.6" />
+    <PackageReference Include="OneOf" Version="3.0.178" />
   </ItemGroup>
 
 </Project>
