--- a/test/HomeCloud.Maps.UnitTests/HomeCloud.Maps.UnitTests.csproj
+++ b/test/HomeCloud.Maps.UnitTests/HomeCloud.Maps.UnitTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extras.Moq" Version="6.0.0" />
+    <PackageReference Include="AutoFixture" Version="4.15.0" />
     <PackageReference Include="coverlet.msbuild" Version="3.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
