--- a/test/HomeCloud.Maps.UnitTests/HomeCloud.Maps.UnitTests.csproj
+++ b/test/HomeCloud.Maps.UnitTests/HomeCloud.Maps.UnitTests.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Jmansar.SemanticComparisonExtensions.NetStandard" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
